# CelestialMechanics

./: .gitignore  README.md  main.py  pyproject.toml
boundary_test1/: desc1.txt  e0_5__v2_eps0_001__deltmax_100.npy  tv1.npy
notebooks/: boundary_interpolation_D0.ipynb  periodic_orbit_stability.ipynb  pynamicalsys_test.ipynb  rewriting_phi_test.ipynb
old_code/: boundary_quad_plot.py  compute_boundary_D0.py  constant_t_ray_images.py  constant_v_curves.py  escape_time_test.py  full_trajectory_test.py  ias15_rk45_speed_comparison.ipynb  plot_vcurves.py
sitnikov/: README.md
sitnikov/boundary_test1/: desc1.txt  escape_time_samples_e0.5.npz
sitnikov/experiments/boundaryD0/: README.md  boundary_functions.py  example_boundary_computation.ipynb  test1_sanity_checks.ipynb  test2_higher_precision.ipynb
sitnikov/experiments/chaotic_saddle/: chaotic_saddle_computations.ipynb  chaotic_saddle_experiment_notes.md  chaotic_saddle_sprinkler2.ipynb  crossings_fast_tests.ipynb
sitnikov/experiments/chaotic_saddle_replicate/: README.md  exact_reproduction.ipynb  run_experiment.py
sitnikov/experiments/fast_sitnikov/: experiment_draft.ipynb
sitnikov/experiments/final_plots/: README.md  experiment_draft.ipynb  phase_space_speedup.ipynb  sali_plot.ipynb  test_phase_space_plot.ipynb
sitnikov/notebooks/: computing_NE_1.ipynb  trash.ipynb
sitnikov/old_code/: compute_boundary_D0.py  constant_t_ray_images.py  energy_evolution.ipynb  escape_time_test.py  escape_time_tolerances_test.ipynb
sitnikov/src/utils/: boundary.py  (+2 more)
src/integrator/: integrate.py
src/utils/: plotting.py
(+99 files in other folders)
