[project]
name = "celestialmechanics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "rebound>=4.6.0",
    "scipy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sitnikov/src"]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "ipykernel>=7.2.0",
    "ipython>=9.11.0",
    "jupyter-client>=8.8.0",
    "jupyter-core>=5.9.1",
    "psutil>=7.2.2",
    "pygments>=2.19.2",
    "tornado>=6.5.4",
    "traitlets>=5.14.3",
]
